<resources>
    <string name="app_name">Dokter RAA Soewondo Pati</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_text">test</string>
    <string name="string_failure">Tidak dapat menjangkau server</string>
    <string name="coba_lagi">Ok</string>
    <string name="detail_masalh">Silahkan periksa kembali koneksi internet anda. Terimakasih !</string>
    <string name="pesan_konek">Tidak tersambung ke internet</string>
    <string name="title_message">Tidak dapat menjangkau server</string>
    <string name="detail_message">Periksa kembali koneksi internet anda !</string>
    <string name="ubah_profil">Klik Gambar dibawah dan pilih foto profil anda.</string>

    <string name="about">Aplikasi Remunerasi merupakan aplikasi sederhana yang mampu membantu perhitungan jasa pelayanan rumah sakit dengan metode konversi" />
</string>

    <string name="tim_it_rsud_raa_soewondo_pati">TIM IT RSUD RAA SOEWONDO PATI</string>
    <string name="dikembangkan_oleh">Dikembangkan oleh :</string>
    <string name="rsud_raa_soewondo_pati">RSUD RAA SOEWONDO PATI</string>
    <string name="aplikasi_remunerasi">Aplikasi Remunerasi</string>

    <array name="menu_icons">
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_account</item>
        <item>@drawable/ic_person</item>
        <item>@drawable/ic_person</item>
    </array>
    <string name="app_key">sekolah100%</string>
    <string name="update_now">Update Now</string>
    <string name="skip">Skip</string>
    <string name="search">Search</string>
    <string name="type_name">Cari Pasien</string>
</resources>
