<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dimens_10dp"
    android:gravity="center">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="50dp"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/primary_text"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/aplikasi_remunerasi" />
            <TextView
                android:textColor="@color/primary_text"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/rsud_raa_soewondo_pati"/>
            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@mipmap/logo"
                android:layout_margin="@dimen/dimens_5dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>
            <TextView
                android:textColor="@color/secondary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:text="@string/aplikasi_remunerasi"/>
                <TextView
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_marginTop="70dp"
                android:text="@string/dikembangkan_oleh" />
            <TextView
                android:textColor="@color/secondary_text"
                android:fontFamily="@font/roboto_medium"
                android:layout_width="match_parent"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:text="@string/tim_it_rsud_raa_soewondo_pati" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>