<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/margin_10dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/failure" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/secondary_text"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/string_failure" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="10sp"
            android:textColor="@color/secondary_text"
            android:text="@string/detail_masalh" />
        <Button
            android:id="@+id/btn_cobalagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:text="@string/coba_lagi"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textAllCaps="false"
            android:textColor="@color/icons" />
    </LinearLayout>
</android.support.v7.widget.CardView>